# mcp-auth-oidc

./: .dockerignore  .env.backup  .gitignore  ASGI_FIX_COMPLETE.md  AUTH0_CHECKLIST.md  FASTMCP_AUTH_REALITY.md  IMPLEMENTATION_COMPLETE.md  KEYCLOAK_ENDPOINTS.md  KEYCLOAK_MIGRATION.md  KEYCLOAK_MIGRATION_GUIDE.md  KEYCLOAK_PROVIDER_NOTE.md  KEYCLOAK_QUICKSTART.md  KEYCLOAK_SETUP_SUMMARY.md  MCP_INSPECTOR_GUIDE.md  MCP_INSPECTOR_KEYCLOAK.md  MIGRATION_SUMMARY.md  OAUTH_ENDPOINTS_CONFIGURED.md  QUICKSTART.md  README.md  SCOPES_UPDATED.md  TESTING.md  TROUBLESHOOTING.md  VERIFICATION.md  check_fastmcp.py  debug-token.sh  debug_token.py  docker-compose.prod.yml  docker-compose.yml  env.keycloak.example  fix-audience.sh  fix-redirect-uri.sh  keycloak-setup.sh  keycloak.env  pyproject.toml  requirements.txt  run.py  setup-ngrok.sh  start-keycloak.sh  test-keycloak.sh  test-oauth-endpoints.sh  (+1 more)
keycloak/: README.md  realm-export.json
src/: __init__.py  app.py  app_wrapper.py  auth_config.py  keycloak_auth_config.py  keycloak_auth_config_no_audience.py  keycloak_config.py  main.py  oauth_endpoints.py  oauth_metadata.py  server.py  simple_server.py
